@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#567618 by indytechcook, neclimdul: Fixed tests.
 #860390 by Kevin Rogers: Fixed .info file parsing error on uncertain platform.
 #645526 by TravisCarden, hutch: Fixed stale local tasks markup after moving them.
 #615058 by Dave Reid: Fixed compatibility with PHP 5.3.
